# modm-devices

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  setup.py
.github/workflows/: deloy.yml  tests.yml
devices/avr/: at90-1_2_216-pwm.xml  at90-32_64_128-can.xml  at90-3_316-pwm.xml  at90-646_647_1286_1287-usb.xml  at90-81_161-pwm.xml  at90-82_162-usb.xml  atmega-128-rfa1.xml  atmega-1281_2561.xml  atmega-1284-n_p.xml  atmega-162.xml  atmega-164_324_644-a_n_p_pa.xml  atmega-164_324_644-a_n_p_pa_pv_v.xml  atmega-164_324_644_1284-a_n_p_pa.xml  atmega-165_325_645.xml  atmega-169_329_649.xml  atmega-16_32-hvb_hvbrevb.xml  atmega-16_32-u4.xml  atmega-16_32-u4_u4rc.xml  atmega-406.xml  (+57 more)
modm_devices/: __init__.py  access.py  cache.py  device.py  device_file.py  device_identifier.py  driver.py  pkg.py
source/: repo.lb
test/: Makefile  device_file_test.py  device_identifier_test.py  project.lb
tools/: sync_docs.py
tools/device/: Makefile  setup.cfg
tools/device/device/: __init__.py  common.py  parser.py  pkg.py
tools/device/device/resources/: catalog.xml
tools/device/device/resources/schema/: device.xsd
tools/device/modm/: __init__.py  common.py  device.py  device_file.py  device_identifier.py  name.py  parser.py  pkg.py
tools/device/modm/resources/schema/: device.xsd  driver.xsd
tools/device/modm_devices/: device_identifier.py  parser.py
tools/device/modm_devices/resources/: devices
tools/device/modm_devices/resources/schema/: device.xsd
tools/device/scripts/: count_families  device  stats
tools/device/test/: device_test.py  name_test.py
(+265 files in other folders)
