[metadata]
name = modm-devices
version = 0.1.0
author = Fabian Greif
author_email = fabian.greif@rwth-aachen.de
description = Curated data for AVR and STM32 devices
long_description = Curated data for AVR and STM32 devices
long_description_content_type = text/plain
keywords = modm-devices stm32 avr sam nrf
url = https://github.com/modm-io/modm-devices
license = MPL-2.0
license-file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)

[options]
python_requires = >=3.0
packages =
    modm_devices
install_requires =
    lxml

[options.package_data]
modm_devices =
    resources/catalog.xml
    resources/schema/*.xsd
    resources/devices/avr/*.xml
    resources/devices/nrf/*.xml
    resources/devices/sam/*.xml
    resources/devices/stm32/*.xml
